--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,4 @@
- Miguel Isaac V. Gomes-2C 27/08/2024
+ // Miguel Isaac V. Gomes-2C 27/08/2024
 body {
     background-color: #292424;
     color: #F5F5F5;
