--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,3 @@
- // Miguel Isaac V. Gomes-2C 27/08/2024
 body {
     background-color: #292424;
     color: #F5F5F5;
@@ -30,7 +29,7 @@ main {
     text-align: center;
     max-width: 100%;
 }
-
+Miguel Isaac V. Gomes-2C 27/08/2024
 img {
     max-width: 70%;
 }
