--- a/Style.css
+++ b/Style.css
@@ -29,8 +29,9 @@ main {
     text-align: center;
     max-width: 100%;
 }
-Miguel Isaac V. Gomes-2C 27/08/2024
-img {
+ {
     max-width: 70%;
 }
 
+Miguel Isaac V. Gomes-2C 27/08/2024
+img
